[gd_scene load_steps=7 format=2]

[ext_resource path="res://assets/reference/quit_pressed.png" type="Texture" id=1]
[ext_resource path="res://assets/reference/quit.png" type="Texture" id=2]
[ext_resource path="res://assets/reference/continue.png" type="Texture" id=3]
[ext_resource path="res://assets/reference/continue_pressed.png" type="Texture" id=4]
[ext_resource path="res://scenes/pause_menu/PauseMenu.gd" type="Script" id=5]
[ext_resource path="res://assets/ui/font.tres" type="DynamicFont" id=6]

[node name="CanvasLayer" type="CanvasLayer"]
script = ExtResource( 5 )

[node name="Control" type="Control" parent="."]
pause_mode = 2
anchor_right = 1.0
anchor_bottom = 1.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="ColorRect" type="ColorRect" parent="Control"]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -250.0
margin_top = -250.0
margin_right = 250.0
margin_bottom = 250.0
rect_min_size = Vector2( 500, 400 )
color = Color( 0.0588235, 0.0509804, 0.0509804, 1 )
__meta__ = {
"_edit_use_anchors_": true
}

[node name="CenterContainer" type="CenterContainer" parent="Control"]
anchor_right = 1.0
anchor_bottom = 1.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="VBoxContainer" type="VBoxContainer" parent="Control/CenterContainer"]
margin_left = 733.0
margin_top = 375.0
margin_right = 1186.0
margin_bottom = 705.0
custom_constants/separation = 50

[node name="Label" type="Label" parent="Control/CenterContainer/VBoxContainer"]
margin_right = 453.0
margin_bottom = 54.0
custom_fonts/font = ExtResource( 6 )
text = "- PAUSE -"
align = 1

[node name="btnContinue" type="TextureButton" parent="Control/CenterContainer/VBoxContainer"]
margin_top = 104.0
margin_right = 453.0
margin_bottom = 192.0
texture_normal = ExtResource( 3 )
texture_pressed = ExtResource( 4 )
texture_focused = ExtResource( 4 )

[node name="btnQuit" type="TextureButton" parent="Control/CenterContainer/VBoxContainer"]
margin_top = 242.0
margin_right = 453.0
margin_bottom = 330.0
texture_normal = ExtResource( 2 )
texture_pressed = ExtResource( 1 )
texture_focused = ExtResource( 1 )
[connection signal="pressed" from="Control/CenterContainer/VBoxContainer/btnContinue" to="." method="_on_btnContinue_pressed"]
[connection signal="pressed" from="Control/CenterContainer/VBoxContainer/btnQuit" to="." method="_on_btnQuit_pressed"]
